kubectl-deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laa-data-pact-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laa-data-pact-broker
  template:
    metadata:
      labels:
        app: laa-data-pact-broker
    spec:
      containers:
      - image: pactfoundation/pact-broker:latest
        imagePullPolicy: Always
        securityContext:
          runAsNonRoot: True
          runAsUser: 101
        name: app
        readinessProbe:
          tcpSocket:
            port: 9292
        ports:
        - containerPort: 9292
          name: http
