kubectl-deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: laa-data-pact-broker
  namespace: laa-data-pact-broker
spec:
  ports:
  - port: 80
    name: http
    targetPort: 9292
  selector:
    app: laa-data-pact-broker
